--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ go:
 before_install:
   - go get github.com/mattn/goveralls
 script:
-  - $HOME/gopath/bin/goveralls -service=travis-ci
+  - env GO111MODULE=on $HOME/gopath/bin/goveralls -service=travis-ci
