--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: go
 sudo: false
 go:
   - 1.11.x
+env:
+  global:
+    - GO111MODULE=on
 before_install:
   - go get github.com/mattn/goveralls
 script:
-  - env GO111MODULE=on $HOME/gopath/bin/goveralls -service=travis-ci
+  - $HOME/gopath/bin/goveralls -service=travis-ci
